--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     github.com/project-slug: ghhenry/primes
 spec:
-  type: other
+  type: library
   lifecycle: experimental
   owner: guests
